--- a/HomeApps/Views/Home/Index.cshtml
+++ b/HomeApps/Views/Home/Index.cshtml
@@ -7,8 +7,20 @@
 {
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    @Html.LabelFor(m => m.)
+    <div>
+        @Html.ActionLink("Login", "login")
+    </div>
+    <br />
+    <div>
+        @Html.ActionLink("App List", "AppList")
+    </div>
 
+    <br />
+    <div>
+        @Html.ActionLink("Gas", "Index", "Autos")
+    </div>
 }
+
+
 
 
