--- a/HomeApps/Views/Stations/Create.cshtml
+++ b/HomeApps/Views/Stations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model HomeApps.Auto
+﻿@model HomeApps.Station
 
 @{
     ViewBag.Title = "Create";
@@ -11,15 +11,15 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Auto</h4>
+        <h4>Station</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
         <div class="form-group">
-            @Html.LabelFor(model => model.AutoName, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AutoName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AutoName, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
