--- a/HomeApps/Views/Autos/Index.cshtml
+++ b/HomeApps/Views/Autos/Index.cshtml
@@ -24,7 +24,8 @@
             @Html.DisplayFor(modelItem => item.AutoName)
         </td>
         <td>
-            @Html.ActionLink("Add Miles", "Create","Miles", new { id = item.AutoID },null) |
+            @Html.ActionLink("Miles", "Index", "Miles", new { id = item.AutoID }, null) |
+            @Html.ActionLink("Add Miles", "Create", "Miles", new { id = item.AutoID }, null) |
             @Html.ActionLink("Edit", "Edit", new { id = item.AutoID }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.AutoID })
         </td>
