--- a/HomeApps/Views/Miles/Index.cshtml
+++ b/HomeApps/Views/Miles/Index.cshtml
@@ -3,21 +3,24 @@
 @{
     ViewBag.Title = "Index";
     User sessionuser = this.Session["_CurrentUser"] as User;
+
+    decimal MPG = 0;
+    decimal LastMiles = 0;
+
+    //decimal MaxMiles = Model.Max(m => m.TotalMilesDriven);
+    //decimal MinMiles = Model.Min(m => m.TotalMilesDriven);
+    //decimal TotalGallons = Model.Sum(m => m.TotalGallons);
+
+    //decimal TotalMiles = MaxMiles - MinMiles;
 }
 
-<h2>Miles for @sessionuser.FirstName)</h2>
+<h2>Miles for @sessionuser.FirstName - @Model.First().AutoID</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Deleted)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AutoID)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.GasDate)
         </th>
@@ -31,52 +34,57 @@
             @Html.DisplayNameFor(model => model.TotalMilesDriven)
         </th>
         <th>
+            @Html.DisplayName("MPG")
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.EngineRunTime)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Station.Name)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreateModifyLog.CreateModifyID)
-        </th>
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Deleted)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AutoID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.GasDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalGallons)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalPrice)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalMilesDriven)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EngineRunTime)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Station.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreateModifyLog.CreateModifyID)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.MilesID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MilesID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.MilesID })
-        </td>
-    </tr>
+@foreach (var item in Model)
+{
+<tr>
+    <td>
+        @Html.Label(item.GasDate.ToShortDateString())
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TotalGallons)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TotalPrice)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TotalMilesDriven)
+    </td>
+    <td>
+        @{
+            if (LastMiles > 0)
+            {
+                MPG = (item.TotalMilesDriven - LastMiles) / item.TotalGallons;
+            }
+        }
+        @Html.Label(MPG.ToString("0")) 
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.EngineRunTime)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Station.Name)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.MilesID }) |
+        @Html.ActionLink("Details", "Details", new { id = item.MilesID }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.MilesID })
+    </td>
+</tr>
+    
+        LastMiles = item.TotalMilesDriven;
+    
+
 }
 
 </table>
