--- a/HomeApps/Views/Autos/Index.cshtml
+++ b/HomeApps/Views/Autos/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Autos for @sessionuser.FirstName</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Car", "Create")
 </p>
 <table class="table">
     <tr>
