--- a/HomeApps/Views/Miles/Create.cshtml
+++ b/HomeApps/Views/Miles/Create.cshtml
@@ -13,53 +13,61 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.AutoID, new { htmlAttributes = new { @class = "form-control" } })
 
-    <div class="form-horizontal">
-        <h4>Mile</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="form-horizontal">
+    <h4>Mile</h4>
+    <hr />
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.GasDate, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.GasDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.GasDate, "", new { @class = "text-danger" })
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.GasDate, htmlAttributes: new { @class = "control-label col-md-3" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.GasDate, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.GasDate, "", new { @class = "text-danger" })
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalGallons, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalGallons, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.001" } })
-                @Html.ValidationMessageFor(model => model.TotalGallons, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01" } })
-                @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TotalMilesDriven, htmlAttributes: new { @class = "control-label col-md-3" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TotalMilesDriven, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01" } })
-                @Html.ValidationMessageFor(model => model.TotalMilesDriven, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <span class="col-md-1"> @Html.LabelFor(model => model.StationID, "Station", htmlAttributes: new { @class = "control-label" }) - <span onclick='AddStation()'>Add new Station</span></span>
-            <div class="col-md-10">
-                @Html.DropDownList("StationID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.StationID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
     </div>
+
+    <div class="form-group">
+        <span class="col-md-1"> @Html.LabelFor(model => model.GasTypeID, "GasType", htmlAttributes: new { @class = "control-label" })</span>
+        <div class="col-md-10">
+            @Html.DropDownList("GasTypeID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.GasTypeID, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TotalGallons, htmlAttributes: new { @class = "control-label col-md-3" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TotalGallons, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.001" } })
+            @Html.ValidationMessageFor(model => model.TotalGallons, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-3" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TotalPrice, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01" } })
+            @Html.ValidationMessageFor(model => model.TotalPrice, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.TotalMilesDriven, htmlAttributes: new { @class = "control-label col-md-3" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.TotalMilesDriven, new { htmlAttributes = new { @class = "form-control", type = "number", step = "0.01" } })
+            @Html.ValidationMessageFor(model => model.TotalMilesDriven, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <span class="col-md-1"> @Html.LabelFor(model => model.StationID, "Station", htmlAttributes: new { @class = "control-label" }) - <span onclick='AddStation()'>Add new Station</span></span>
+        <div class="col-md-10">
+            @Html.DropDownList("StationID", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.StationID, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+
+</div>
 
     <input type="submit" value="Add" class="btn-default" />
 }
@@ -82,7 +90,7 @@
 <br />
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index",new { id =  Model.AutoID})
 </div>
 
 
@@ -94,42 +102,56 @@
         $('#myModal').hide()
     }
 
-    $('#AddMiles').click(function (e) {
+
+    $('#AddStation').click(function (e) {
 
     // prevent the default event behaviour
-        e.preventDefault();
+        //e.preventDefault();
         var name = $("#NewStationName").val();
         var AddURL = '@Url.Action("CreateWebStation","Stations")'
 
-        console.log(name);
+        if ('@Request.Url.GetLeftPart(UriPartial.Authority).Contains("localhost")' == "True") {
+            AddURL = '@Request.Url.GetLeftPart(UriPartial.Authority)' + AddURL;
+            
+        }
+        else {
+            AddURL = 'http://dfwdino.dyndns.org/HomeApp' + AddURL;
+        }
 
-    $.ajax({
-        url: 'http://localhost:59091' + AddURL,
-        type: "POST",
-        data: JSON.stringify({ 'station': name}),
-        dataType: "json",
-        traditional: true,
-        contentType: "application/json; charset=utf-8",
-        success: function (data) {
 
-            var stationID = Number(data);
 
-            if (stationID != "NaN") {
-                $('#myModal').hide()
-                $("#StationID").append(
-                                $('<option/>', {
-                                    value: data,
-                                    text: name
-                                }));
-                    alert('New Station Added')
-                } else {
-                    alert("Error occurs on the Database level! " + data);
+        $.ajax({
+            url: AddURL,
+            type: "POST",
+            data: JSON.stringify({ 'station': name}),
+            dataType: "json",
+            traditional: true,
+            contentType: "application/json; charset=utf-8",
+            success: function (data) {
+
+                var stationID = Number(data);
+
+                if (stationID != "NaN") {
+                    $('#myModal').hide()
+                    $("#StationID").append(
+                                    $('<option/>', {
+                                        value: data,
+                                        text: name
+                                    }));
+                        alert('New Station Added')
+                    } else {
+                        alert("Error occurs on the Database level! " + data);
+                    }
+                },
+            error: function () {
+                    alert("An error has occured!!!");
                 }
-            },
-        error: function () {
-                alert("An error has occured!!!");
-            }
         });
+
+        CloseStationAdd();
+
+        
+
 });
 
 
