--- a/HomeApps/Views/Miles/Edit.cshtml
+++ b/HomeApps/Views/Miles/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_GasLayout.cshtml";
 }
 
 <h2>Edit</h2>
@@ -16,7 +17,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.MilesID)
 
-        <div class="form-group">
+        @*<div class="form-group">
             @Html.LabelFor(model => model.Deleted, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
@@ -24,7 +25,7 @@
                     @Html.ValidationMessageFor(model => model.Deleted, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             @Html.LabelFor(model => model.GasDate, htmlAttributes: new { @class = "control-label col-md-2" })
