--- a/HomeApps/Views/Stations/Index.cshtml
+++ b/HomeApps/Views/Stations/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_GasLayout.cshtml";
 }
 
 <h2>Index</h2>
@@ -36,7 +37,6 @@
         </td>*@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.StationID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.StationID }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.StationID })
         </td>
     </tr>
