Add some admin tools and fix the javascript issue.

--- a/HomeApps/Views/Home/Index.cshtml
+++ b/HomeApps/Views/Home/Index.cshtml
@@ -11,14 +11,14 @@
         @Html.ActionLink("Login", "login")
     </div>
     <br />
-    <div>
+    @*<div>
         @Html.ActionLink("App List", "AppList")
-    </div>
+    </div>*@
 
     <br />
-    <div>
+    @*<div>
         @Html.ActionLink("Gas", "Index", "Autos")
-    </div>
+    </div>*@
 }
 
 
