--- a/HomeApps/Views/Shared/_Layout.cshtml
+++ b/HomeApps/Views/Shared/_Layout.cshtml
@@ -3,8 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome To Our House Web Apps</title>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <title>Welcome to Shans's Home Apps</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/modernizr-2.8.3.js"></script>
 
@@ -16,7 +17,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Our House</a>
+        <a class="navbar-brand" href="#">Home Apps</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,7 +25,8 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @Html.ActionLink("Gas", "Index", "Autos", null, new { @class = "nav-link" })
+                    @if (this.Session["_CurrentUser"] != null) {
+                    @Html.ActionLink("Gas", "Index", "Autos", null, new { @class = "nav-link" })}
                 </li>
             </ul>
 
