--- a/HomeApps/Views/Miles/Index.cshtml
+++ b/HomeApps/Views/Miles/Index.cshtml
@@ -49,7 +49,7 @@ else
     </p>
     <table class="table">
         <tr class="Header">
-            <th style="width:33%">
+            <th style="width:25%">
                 <div class="row">
                     @Html.DisplayName("Date")
                 </div>
@@ -57,29 +57,38 @@ else
                     @Html.DisplayName("Station")
                 </div>
             </th>
-            <th style="width:33%">
+
+            <th style="width:25%">
                 <div class="row">
                     @Html.DisplayName("Total Gallons")
                 </div>
                 <div class="row">
                     @Html.DisplayName("Total Price")
                 </div>
-
             </th>
 
-            <th style="width:33%">
+            <th style="width:25%">
+                <div class="row">
+                    @Html.DisplayName("MPG")
+                </div>
                 <div class="row">
                     @Html.DisplayName("Total Miles")
                 </div>
+            </th>
+
+            <th style="width:25%">
                 <div class="row">
-                    @Html.DisplayName("MPG")
+                    @Html.DisplayName("Miles Drove")
+                </div>
+                <div class="row">
+                    @Html.DisplayName("Gas Type")
                 </div>
 
             </th>
 
         </tr>
 
-        @foreach (var item in Model.Miles)
+        @foreach (var item in Model.Miles.OrderByDescending(m => m.GasDate))
         {
             <tr>
                 <td>
@@ -101,19 +110,19 @@ else
                 </td>
                 <td>
                     <div class="row">
-
-                        @item.TotalMilesDriven.ToString("#")
+                        @item.MPG.ToString("#")
                     </div>
                     <div class="row">
-                        @{
-                            if (Model.LastMiles > 0)
-                            {
-                                Model.MPG = (Model.LastMiles - item.TotalMilesDriven) / item.TotalGallons;
-                            }
-                        }
-                        <span>@Model.MPG.ToString("#")</span>
+                        @item.TotalMilesDriven.ToString("#")
                     </div>
-
+                <td>
+                    <div class="row">
+                        @item.MilesDrove
+                    </div>
+                    <div class="row">
+                        @item.Type.TypeName
+                    </div>
+                </td>
                 </td>
             </tr>
 
