--- a/HomeApps/Views/Shared/PhotoCRM.cshtml
+++ b/HomeApps/Views/Shared/PhotoCRM.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Shans's Home Apps</title>
+    <title>Photo App</title>
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 
     <script src="~/Scripts/bootstrap.min.js"></script>
@@ -17,7 +18,7 @@
 
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Home Apps</a>
+        <a class="navbar-brand" href="/">Home Apps</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,18 +26,24 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    @if (this.Session["_CurrentUser"] != null)
-                    {
-                        @Html.ActionLink("Gas", "Index", "Autos", null, new { @class = "nav-link" })
-                    }
+                    @Html.ActionLink("Models", "Index", "Models", null, new { @class = "nav-link" })
                 </li>
                 <li class="nav-item">
-                    @if (this.Session["_CurrentUser"] != null)
-                    {
-                        @Html.ActionLink("Models", "Index", "Models/Index",null, new { @class = "nav-link" })
-                    }
+                    @Html.ActionLink("Social Sites", "Index", "SocialSites", null, new { @class = "nav-link" })
                 </li>
+                @*<li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Dropdown link
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>*@
             </ul>
+
+
         </div>
     </nav>
 
@@ -62,4 +69,3 @@
         padding-top: 15px;
     }
 </style>
-
