--- a/HomeApps/Views/Shared/_Layout.cshtml
+++ b/HomeApps/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
 ﻿<!DOCTYPE html>
+@{ 
+    User currentuser = this.Session["_CurrentUser"] as User;
+}
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -23,34 +27,36 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    @if (this.Session["_CurrentUser"] != null)
-                    {
-                        @Html.ActionLink("Gas", "Index", "Autos", null, new { @class = "nav-link" })
-                    }
-                </li>
-                <li class="nav-item">
-                    @if (this.Session["_CurrentUser"] != null)
-                    {
-                        @Html.ActionLink("Models", "Index", "Models/Index",null, new { @class = "nav-link" })
-                    }
-                </li>
-            </ul>
+            @if (this.Session["_CurrentUser"] != null)
+            {
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        @if (currentuser.Role.RoleName.Equals("Admin") || currentuser.UserSchemas.Where(m => m.Schema.SchemaName.Equals("Auto")).Count().Equals(1)) 
+                        {
+                            @Html.ActionLink("Gas", "Index", "Autos", null, new { @class = "nav-link" })
+                        }
+                    </li>
+                    <li class="nav-item">
+                        @if (currentuser.Role.RoleName.Equals("Admin") || currentuser.UserSchemas.Where(m => m.Schema.SchemaName.Equals("Models")).Count().Equals(1))
+                        {
+                            @Html.ActionLink("Models", "Index", "Models/Index", null, new { @class = "nav-link" })
+                        }
+                        </li>
+                </ul>
+        }
+        </nav>
+
+
+        <div class="container body-content" id="RenderBody">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p></p>
+            </footer>
         </div>
-    </nav>
 
 
-    <div class="container body-content" id="RenderBody">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p></p>
-        </footer>
-    </div>
-
-
-</body>
+    </body>
 </html>
 
 <style>
